--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>AI House Price Prediction</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>🏠 House Price Prediction</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>🏠 House Price Prediction</h2>
-        <form method="POST">
-            <label>Area (m²):</label>
-            <input type="number" name="area" required><br>
+  <div class="container">
+    <h2>🏠 House Price Prediction</h2>
 
-            <label>Number of Rooms:</label>
-            <input type="number" name="rooms" required><br>
+    <form id="predictForm">
+      <label>Area (m²):</label>
+      <input type="number" name="area" required><br>
 
-            <label>Number of Bathrooms:</label>
-            <input type="number" name="bathrooms" required><br>
+      <label>Number of Rooms:</label>
+      <input type="number" name="rooms" required><br>
 
-            <button type="submit">Predict</button>
-        </form>
+      <label>Number of Bathrooms:</label>
+      <input type="number" name="bathrooms" required><br>
 
-        {% if prediction %}
-        <div class="result">
-            💰 Estimated Price: <strong>${{ prediction }}</strong>
-        </div>
-        {% endif %}
-    </div>
+      <button type="submit">Predict</button>
+    </form>
+
+    <h3 id="result"></h3>
+  </div>
+
+  <script>
+    document.getElementById("predictForm").onsubmit = async (e) => {
+      e.preventDefault();
+
+      let formData = new FormData(e.target);
+      let response = await fetch("/predict", { method: "POST", body: formData });
+      let result = await response.json();
+
+      if(result.predicted_price){
+        document.getElementById("result").innerText = "💰 Predicted Price: $" + result.predicted_price;
+      } else {
+        document.getElementById("result").innerText = "⚠️ Error: " + result.error;
+      }
+    }
+  </script>
 </body>
 </html>
